[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/HitFlashComponent.gd" type="Script" id=1]

[node name="HitFlashComponent" type="Node"]
script = ExtResource( 1 )

[node name="FlasFrequency" type="Timer" parent="."]
wait_time = 0.1

[node name="FlashDuration" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="FlasFrequency" to="." method="_on_FlasFrequency_timeout"]
[connection signal="timeout" from="FlashDuration" to="." method="_on_FlashDuration_timeout"]
